--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li id="li_one"><a href="#" input title="myaccount" name="#">My Account</a></li>
                     <br>
                     <li id="li_one"><a href="#" title="mycart">My Cart</a></li>
-                    <li id="li_one"><a href="#" title="chechout">Checkout</a></li>
+                    <li id="li_one"><a href="#" title="checkout">Checkout</a></li>
                     <li id="li_one"><a href="#">Log In</a></li>
                     <br>                 
                     <li class="compras shop" id="shop">Shopping -$0.00</li>
